# wikibots-curator-backend

./: .gitignore  .prettierrc  .windsurfrules  CLAUDE.md  MIGRATION.md  Procfile  README-TS.md  README.md  alembic.ini  asyncapi.yml  compose.yaml  eslint.config.js  images.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  toolforge-openapi.json  wanted_categories.duckdb.wal
.claude/: settings.local.json
.github/workflows/: basedpywight_type_check.yml  black_formatter_check.yml  ruff_check.yml  tests.yml  ty.yml
alembic/: env.py
alembic/versions/: 05cabbf622bd_fix_missing_sdc_globe_coordinate_fields.py  0660d20afdac_add_last_edited_by_to_upload_requests.py  079f0a6f0aed_add_id_to_batches_and_batchid_to_upload_.py  132e3ec448f0_add_unique_constraint_for_default_.py  17859f360896_add_celery_task_id_to_upload_requests.py  25ebee3eeed4_add_indexes_for_performance_optimization.py  324d2fe7d7ec_remove_sdc_column_from_upload_requests.py  3f0f4e5a2b1c_add_sdc_v2_to_upload_requests.py  47e3273eb7e7_batches_primary_key_migration.py  4ab5dee85aad_update_duplicate_status.py  53640eac191d_add_copyright_override_to_upload_.py  5be0bf0d65f8_drop_celery_tables.py  5cc957424c9d_drop_last_edited_by_from_upload_requests.py  7a39cf636b76_update_wikitext_sdc.py  867257161463_initial_schema.py  8b31e3fb791b_add_presets_table.py  8b31e3fb791b_squashed.py  92f6627d6e2f_add_success_column_to_upload_requests.py  96cbd345d014_change_error_to_json.py  b6b446c58114_add_edit_group_id_to_batches.py  ba6538063ee6_.py  bd1c814beae3_add_composite_index_for_batch_stats.py  e63e2657da9e_change_sdc_column_to_json.py  eadcf1e6c6b9_remove_max_length_restrictions_from_.py  ed3e8b47a240_add_collection_and_token_to_upload_.py  ee36be0a76c7_remove_sdc_v2.py  f21ad8fa810b_update_db_models.py
backend/: .env.example  package.json  tsconfig.json
backend/src/: index.ts
buildpack-bun/: buildpack.toml
frontend/: README.md  components.d.ts  index.html  package.json  vite.config.ts
src/curator/: admin.py  asyncapi.py  auth.py  collections.py  frontend_utils.py  harbor.py  ingest.py  main.py  mapillary.py  protocol.py  toolforge.py  ws.py
tests/: conftest.py  fixtures.py  test_admin.py  test_alembic_startup_async_sqlite.py  test_asyncapi_integration.py  test_asyncapi_messages.py  test_auth.py  test_auth_dependencies.py  test_auth_serialization.py  test_batch_streaming.py  test_batch_subscription.py  test_batched_upload.py  test_batches_subscription.py  test_batches_subscription_integration.py  test_cashews_integrity.py  test_celery_config.py  test_collections_endpoint.py  test_commons.py  test_commons_download.py  test_commons_helpers.py  test_commons_isolation.py  test_commons_media_api.py  test_commons_sdc_apply.py  test_commons_upload.py  test_crypto.py  test_crypto_access_token.py  test_dal.py  test_dal_filtering.py  test_dal_stats.py  test_db_config.py  test_download.py  test_edit_group_id.py  test_exception_handler.py  test_geocoding.py  test_handler_site_isolation.py  test_image_serialization.py  test_ingest.py  test_ingest_async.py  test_ingest_batches_endpoint.py  test_ingest_upload_endpoint.py  (+37 more)
tests/app/: test_dal.py  test_dal_admin_retry.py  test_dal_batches.py  test_dal_cancel.py  test_dal_filtering.py  test_dal_get_upload_request.py  test_dal_optimized.py  test_dal_presets.py  test_dal_stats.py  test_flickr_fetch.py  test_flickr_handler.py  test_flickr_handler_batch.py  test_flickr_handler_creation.py  (+6 more)
(+288 files in other folders)
