[project]
name = "curator-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "DaxServer",email = "daxserver@icloud.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.0,<0.117.0)",
    "mwoauth (>=0.4.0,<0.5.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.poetry]
packages = [{include = "curator", from = "src"}]

[tool.poetry.scripts]
web = "curator.main:start"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
basedpyright = "^1.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
