[project]
name = "curator-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "DaxServer",email = "daxserver@icloud.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "alembic (>=1.16.5,<2.0.0)",
    "asgiref (>=3.8.0,<4.0.0)",
    "authlib (>=1.6.5,<2.0.0)",
    "celery (>=5.3.6,<6.0.0)",
    "fastapi[standard] (>=0.116.0,<1.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "mwoauth (>=0.4.0,<1.0.0)",
    "pywikibot (>=10.5.0,<11.0.0)",
    "redis (>=5.0.1,<6.0.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
alembic = "alembic.config:main"
web = "curator.main:start"
worker = "curator.workers.mapillary:start"
celery = "curator.workers.celery:start"

[tool.poetry]
packages = [{include = "curator", from = "src"}]

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.21.0"
black = "^25.9.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
