[project]
name = "curator-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "DaxServer",email = "daxserver@icloud.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "alembic (>=1.16.5,<2.0.0)",
    "asgiref (>=3.8.0,<4.0.0)",
    "authlib (>=1.6.5,<2.0.0)",
    "cashews[redis] (>=7.4.4,<8.0.0)",
    "celery[sqlalchemy] (>=5.6.2,<6.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "fastapi (>=0.125.0,<1.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "mwoauth (>=0.4.0,<1.0.0)",
    "mysql-connector-python (>=9.5.0,<10.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "pywikibot (>=10.5.0,<11.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "sqlmodel (>=0.0.27,<1.0.0)",
    "starsessions (>=2.2.1,<3.0.0)",
    "uvicorn (>=0.38.0,<1.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
]

[project.scripts]
alembic = "alembic.config:main"
web = "curator.main:start"
worker = "curator.workers.celery:start"

[tool.poetry]
packages = [{include = "curator", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
pytest-timeout = "^2.4.0"
ruff = "^0.14.10"
ty = "^0.0.8"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.isort]
profile = "black"

[tool.ty.src]
exclude = ["src/curator/asyncapi"]
